--- a/conf/config.json
+++ b/conf/config.json
@@ -4,24 +4,14 @@
     "def_ssh_key": "",
     "Tag_View": true,
     "SSHKEY": "/opt/MySshTools/key/id_rsa",
-    "log_path": "/var/log",
-    "encryption_algorithm": "HS256",
-    "secret_key": "e9szyG10YKF3ADHghcRA2ursvOMtYS0bhbLmJsu8",    
-    "token_expiration_minutes": 30,
-    "services":{
-        "Nginx":{
-            "name": "Nginx",
-            "description": "Nginx Web Server",
-            "exec_start": "nginx",
-            "user":"root",
-            "working_dir": "/etc/nginx"
-        },
-        "keep-alive":{
-            "name": "keep-alive",
-            "description": "Keep Alive Service",
-            "exec": "keep-alive.py",
-            "user":"root"            
-        }
-
-    }
+    "api_config": {
+        "encryption_algorithm": "HS256",
+        "api_secret_key": "xcvbcvbcv cvbcvbcvbcbcbcb",
+        "token_expiration_minutes": 30,
+        "publish_port": 8080,
+        "publish_on_localhost": false,
+        "user": "root",
+        "password": "$2b$12$8yzpDb8.1VuMGF8IsjsmVOQM1TA.INtEygZL9YZ.NQum.fA8sVmzO"
+    },
+    "log_path": "/var/log"
 }
